handle null customer for get by id