@@ -4,12 +4,12 @@ import com.wpirog.customer.controller.response.GetCustomerResponse;
 import com.wpirog.customer.domain.CustomerDto;
 import com.wpirog.customer.mapper.CustomerMapper;
 import com.wpirog.customer.service.CustomerService;
-import lombok.RequiredArgsConstructor;
 import lombok.extern.slf4j.Slf4j;
 import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.cloud.context.config.annotation.RefreshScope;
 import org.springframework.web.bind.annotation.*;
 
+import java.util.Collections;
 import java.util.List;
 
 import static org.springframework.util.MimeTypeUtils.APPLICATION_JSON_VALUE;
@@ -27,9 +27,11 @@ public class CustomerController {
 
     @GetMapping("/{idCustomer}")
     public GetCustomerResponse getCustomers(@PathVariable Long idCustomer) {
-        List<CustomerDto> customers = List.of(mapper.mapToCustomerDto(customerService.getAccount(idCustomer)));
-
-        return GetCustomerResponse.of(customers);
+        var customer = customerService.getAccount(idCustomer).orElse(null);
+        if (customer == null) {
+            return GetCustomerResponse.of(Collections.emptyList());
+        }
+        return GetCustomerResponse.of(List.of(mapper.mapToCustomerDto(customer)));
     }
 
     @PostMapping(consumes = APPLICATION_JSON_VALUE)
